# CareerBloomAgent

./: .gcloudignore  .gitignore  README.md  firestore.rules
agent/: .env.example  __init__.py  config.py  pyproject.toml
agent/insight_extractor/: __init__.py  agent.py  tools.py
agent/job_collector/: __init__.py  agent.py  tools.py
agent/matching_calculator/: __init__.py  agent.py  tools.py
agent/roadmap_advisor/: __init__.py  agent.py
agent/shared/: __init__.py  firestore_client.py
agent/tests/: test_insight_extractor.py  test_job_collector.py  test_matching_calculator.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  requirements.txt
backend/middleware/: auth.py  path_validation.py
backend/models/: chat.py  insight.py  matching.py  skill.py  user.py
backend/routers/: admin.py  auth.py  chat.py  dashboard.py  history.py  insights.py  jobs.py  matching.py  public_config.py  skills.py  sparring.py
backend/services/: agent_service.py  firebase_auth.py  firestore.py  insight_engine.py  matching_engine.py  quota.py  vertex_ai.py
backend/tests/: conftest.py  fakes.py  test_admin_api.py  test_admin_auth.py  test_middleware_auth.py  test_quota_logic.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: DashboardCard.tsx  GuestBanner.tsx  Header.tsx  Providers.tsx  Sidebar.tsx
frontend/app/lib/: api.ts  (+2 more)
scripts/: disable_vertex_ai_cache.sh
(+23 files in other folders)
